# GFE_CPyBind

./: .gitignore  CMakeLists.txt  GFE_Bind.cpp  GFE_CPyBind.cpp  README.md
Post/: Bind.cpp  CMakeLists.txt  GFE_API_CPy.cpp  GFE_API_CPy.h  GFE_Post.h  GFE_Post_Bind.cpp  api_a_Cpy.h
Post/GFE_Struct/: GFE_Mesh_CPy.cpp  GFE_Mesh_CPy.h  GFE_Outp2_CPy.cpp  GFE_Outp2_CPy.h  GFE_Outp_Cpy.cpp  GFE_Outp_Cpy.h
Post/Private/: db_type_Cpy.h
install/: GFE.cp38-win_amd64.pyd  test.py
